// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the component correctly when has basic props 1`] = `
.c0 {
  color: #69788C;
  font-size: 0.9375rem;
  font-weight: 400;
  line-height: 1.219rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #FFFFFF;
  border: 2px solid #A6B5BB;
  border-radius: 50%;
  display: inline-block;
  position: relative;
  padding: 6px;
  margin: 0.25rem 12px 0.25rem 0;
}

.c2:not([disabled]):hover,
.c2:not([disabled]):focus {
  border-color: #003FF2;
  box-shadow: 0 0 0 4px #003FF23D;
}

.c2[checked] {
  padding: 3px;
  border-width: 5px;
  border-color: #01B36A;
  background-color: #FFFFFF;
}

<form
  action="#"
>
  <p
    class="c0"
    data-testid="Text"
  >
    Example
  </p>
  <label
    class="c1"
    for="option-one"
  >
    <input
      class="c2"
      id="option-one"
      name="example"
      type="radio"
      value="one"
    />
    <span
      class="c0"
      data-testid="Text"
    >
      One
    </span>
  </label>
  <label
    class="c1"
    for="option-two"
  >
    <input
      class="c2"
      id="option-two"
      name="example"
      type="radio"
      value="two"
    />
    <span
      class="c0"
      data-testid="Text"
    >
      Two
    </span>
  </label>
  <label
    class="c1"
    for="option-three"
  >
    <input
      class="c2"
      id="option-three"
      name="example"
      type="radio"
      value="three"
    />
    <span
      class="c0"
      data-testid="Text"
    >
      Three
    </span>
  </label>
</form>
`;

exports[`should render the component correctly when has checked prop 1`] = `
.c0 {
  color: #69788C;
  font-size: 0.9375rem;
  font-weight: 400;
  line-height: 1.219rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #FFFFFF;
  border: 2px solid #A6B5BB;
  border-radius: 50%;
  display: inline-block;
  position: relative;
  padding: 6px;
  margin: 0.25rem 12px 0.25rem 0;
}

.c2:not([disabled]):hover,
.c2:not([disabled]):focus {
  border-color: #003FF2;
  box-shadow: 0 0 0 4px #003FF23D;
}

.c2[checked] {
  padding: 3px;
  border-width: 5px;
  border-color: #01B36A;
  background-color: #FFFFFF;
}

<form
  action="#"
>
  <p
    class="c0"
    data-testid="Text"
  >
    Example
  </p>
  <label
    class="c1"
    for="option-one"
  >
    <input
      checked=""
      class="c2"
      id="option-one"
      name="example"
      type="radio"
      value="one"
    />
    <span
      class="c0"
      data-testid="Text"
    >
      One
    </span>
  </label>
  <label
    class="c1"
    for="option-two"
  >
    <input
      class="c2"
      id="option-two"
      name="example"
      type="radio"
      value="two"
    />
    <span
      class="c0"
      data-testid="Text"
    >
      Two
    </span>
  </label>
  <label
    class="c1"
    for="option-three"
  >
    <input
      class="c2"
      id="option-three"
      name="example"
      type="radio"
      value="three"
    />
    <span
      class="c0"
      data-testid="Text"
    >
      Three
    </span>
  </label>
</form>
`;

exports[`should render the component correctly when has disabled prop 1`] = `
.c0 {
  color: #69788C;
  font-size: 0.9375rem;
  font-weight: 400;
  line-height: 1.219rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #00224B14;
  border: 2px solid #00224B14;
  border-radius: 50%;
  display: inline-block;
  position: relative;
  padding: 6px;
  margin: 0.25rem 12px 0.25rem 0;
}

.c2:not([disabled]):hover,
.c2:not([disabled]):focus {
  border-color: #003FF2;
  box-shadow: 0 0 0 4px #003FF23D;
}

.c2[checked] {
  padding: 3px;
  border-width: 5px;
  border-color: #00224B14;
  background-color: #69788C52;
}

<form
  action="#"
>
  <p
    class="c0"
    data-testid="Text"
  >
    Example
  </p>
  <label
    class="c1"
    for="option-one"
  >
    <input
      class="c2"
      disabled=""
      id="option-one"
      name="example"
      type="radio"
      value="one"
    />
    <span
      class="c0"
      data-testid="Text"
    >
      One
    </span>
  </label>
  <label
    class="c1"
    for="option-two"
  >
    <input
      class="c2"
      disabled=""
      id="option-two"
      name="example"
      type="radio"
      value="two"
    />
    <span
      class="c0"
      data-testid="Text"
    >
      Two
    </span>
  </label>
  <label
    class="c1"
    for="option-three"
  >
    <input
      class="c2"
      disabled=""
      id="option-three"
      name="example"
      type="radio"
      value="three"
    />
    <span
      class="c0"
      data-testid="Text"
    >
      Three
    </span>
  </label>
</form>
`;

exports[`should render the component correctly when has error prop 1`] = `
.c0 {
  color: #69788C;
  font-size: 0.9375rem;
  font-weight: 400;
  line-height: 1.219rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
}

.c3 {
  color: #D93E3E;
  font-size: 0.8125rem;
  font-weight: 400;
  line-height: 1.056rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #FFFFFF;
  border: 2px solid #A6B5BB;
  border-radius: 50%;
  display: inline-block;
  position: relative;
  padding: 6px;
  margin: 0.25rem 12px 0.25rem 0;
}

.c2:not([disabled]):hover,
.c2:not([disabled]):focus {
  border-color: #003FF2;
  box-shadow: 0 0 0 4px #003FF23D;
}

.c2[checked] {
  padding: 3px;
  border-width: 5px;
  border-color: #01B36A;
  background-color: #FFFFFF;
}

<form
  action="#"
>
  <p
    class="c0"
    data-testid="Text"
  >
    Example
  </p>
  <label
    class="c1"
    for="option-one"
  >
    <input
      class="c2"
      id="option-one"
      name="example"
      type="radio"
      value="one"
    />
    <span
      class="c0"
      data-testid="Text"
    >
      One
    </span>
  </label>
  <label
    class="c1"
    for="option-two"
  >
    <input
      class="c2"
      id="option-two"
      name="example"
      type="radio"
      value="two"
    />
    <span
      class="c0"
      data-testid="Text"
    >
      Two
    </span>
  </label>
  <label
    class="c1"
    for="option-three"
  >
    <input
      class="c2"
      id="option-three"
      name="example"
      type="radio"
      value="three"
    />
    <span
      class="c0"
      data-testid="Text"
    >
      Three
    </span>
  </label>
  <p
    class="c3"
    data-testid="Text"
  >
    Erro
  </p>
</form>
`;
